# libsrs-alt

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.md  config.h.in  configure  configure.ac  srs.c  test.c
MTAs/: README.EXIM
debian/: changelog  control  copyright  rules
lib/: Makefile.am  Makefile.in  hmac.c  hmac.h  sha1.c  sha1.h  strnlen.c
src/: Makefile.am  Makefile.in  address.c  address.h  hash.c  hash.h  srs_alt.c  srs_alt.h  timestamp.c  timestamp.h
